# OpenPy-TS-Clu

./: .gitignore  README.md  main_clu.ipynb  main_clu.py  main_ts_clu.py  pyproject.toml  requeriments.txt  requirements.txt
openpy_ts_clu/: __init__.py  clustering_algorithm.py  data_preprocessing.py  prepare_data.py  utils.py  utils_plot.py
openpy_ts_clu/BBDD/: load_example.py
